# PGlab9

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp
shaders/: shaderStart.frag
src/: Camera.cpp  main.cpp
